--- a/components/panel/panel.module.css
+++ b/components/panel/panel.module.css
@@ -41,6 +41,21 @@
     }
 }
 
+.progress__list li[role="presentation"] {
+    position: relative;
+}
+
+.progress__list li[role="presentation"]:has(.progress__button:disabled)::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    background-color: var(--clr-background);
+    transform: scale(1.1);
+    transition: background-color 120ms ease-in-out;
+}
+
 .progress__button {
     --outline-color: var(--clr-accent-dark);
 
@@ -54,15 +69,16 @@
 }
 
 html[data-dark-mode="true"] .progress__button {
-    color: #121212;
+    color: var(--clr-dark-mode);
 }
-
 
 .progress__button:is(:hover, :focus-visible) {
     transform: scale(0.96);
 }
+
 .progress__button:disabled {
-    opacity: 0;
+    cursor: default;
+    color: #121212;
 }
 
 .progress__item {
